kubernetes/celery-beat-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: celery-beat-internal
  namespace: default
spec:
  selector:
    app: celery-beat
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  celery-beat
  namespace: default
  labels:
    app:  celery-beat
spec:
  selector:
    matchLabels:
      app: celery-beat
  replicas: 1
  template:
    metadata:
      labels:
        app:  celery-beat
    spec:
      containers:
        - name:  celery-beat
          image: ghcr.io/project-stage-academy/mega-forum
          command: ["celery"]
          args: ["-A", "forum", "beat", "-l", "INFO"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      volumes:
        - name: config-volume
          configMap:
            name: forum-configmap
