kubernetes/celery-worker-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: celery-worker-internal
  namespace: default
spec:
  selector:
    app: celery-worker
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  celery-worker
  namespace: default
  labels:
    app:  celery-worker
spec:
  selector:
    matchLabels:
      app: celery-worker
  replicas: 1
  template:
    metadata:
      labels:
        app:  celery-worker
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name:  celery-worker
          image: ghcr.io/project-stage-academy/ua1198forumsb:main 
          command: ["celery"]
          args: ["-A", "forum", "worker", "-l", "INFO"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      volumes:
        - name: config-volume
          configMap:
            name: forum-configmap
