kubernetes/forum-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forum-internal
  namespace: default
spec:
  selector:
    app: forum
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
