kubernetes/mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: forum-mongo
  namespace: default
spec:
  selector:
    app: forum-mongo
  type: ClusterIP
  ports:
  - name: forum-mongo
    protocol: TCP
    port: 27017
    targetPort: 27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  forum-mongo
  namespace: default
  labels:
    app:  forum-mongo
spec:
  selector:
    matchLabels:
      app: forum-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app:  forum-mongo
    spec:
      containers:
      - name:  forum-mongo
        image:  mongo:4.4.24
        ports:
        - containerPort:  27017
          name:  forum-mongo
        volumeMounts:
          - name: mongo-data
            mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pv-claim
      restartPolicy: Always
