kubernetes/web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-internal
  namespace: default
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: web
          image: ghcr.io/project-stage-academy/ua1198forumsb-web:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      volumes:
        - name: config-volume
          configMap:
            name: forum-configmap
