kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forum-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: mega-forum.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forum-internal
            port:
              number: 80
